# automation-exercise-tests

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: settings.py
config/allure/: allure.yml  categories.json  executor.json
docs/: ALLURE.md  API_CHECKLIST.md  UI_CHECKLIST.md
scripts/: allure_report.ps1  allure_report.sh  run_tests_allure.ps1  run_tests_allure.sh
src/automation_exercise/: __init__.py
src/automation_exercise/api/: __init__.py  assertions.py  client.py
src/automation_exercise/api/services/: __init__.py  account_api.py  brands_api.py  products_api.py  search_api.py
src/automation_exercise/data/: __init__.py  user_factory.py
src/automation_exercise/reporting/: __init__.py  allure_hooks.py
src/automation_exercise/ui/components/: header.py
src/automation_exercise/ui/helpers/: consent.py  modal.py
src/automation_exercise/ui/pages/: account_info_page.py  base_page.py  cart_page.py  checkout_page.py  contact_page.py  home_page.py  product_detail_page.py  products_page.py  signup_login_page.py
tests/: conftest.py
tests/api/: conftest.py  test_account.py  test_brands.py  test_products.py  test_search.py
tests/ui/: conftest.py  test_auth.py  test_cart.py  test_checkout.py  test_misc.py  test_products.py
