[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-exercise-test"
version = "1.0.0"
description = "UI and API test automation for automationexercise.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.59.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.6.0",
    "pytest-xdist>=3.6.0",
    "pydantic-settings>=2.6.0",
    "faker>=33.0.0",
    "python-dotenv>=1.0.0",
    "allure-pytest>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "smoke: critical path tests",
    "ui: browser UI tests",
    "api: REST API tests",
    "regression: full regression suite",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
